...
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/view">

    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/start"
        android:onClick="onStartClick"
        android:layout_marginStart="54dp"
...
