...

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="00:00"
                        android:id="@+id/arriveAt"
                        android:layout_gravity="center_horizontal"
                        android:textSize="24sp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/arriveAtText"
                        android:allowUndo="false"
                        />
...
